--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,26 +1,18 @@
 <h1>Listing bookmarks</h1>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Url</th>
-    <th>Comment</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<ol>
 
 <% @bookmarks.each do |bookmark| %>
-  <tr>
-    <td><%= bookmark.title %></td>
-    <td><%= bookmark.url %></td>
-    <td><%= bookmark.comment %></td>
-    <td><%= link_to 'Show', bookmark %></td>
-    <td><%= link_to 'Edit', edit_bookmark_path(bookmark) %></td>
-    <td><%= link_to 'Destroy', bookmark, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+  <li>
+    <%= bookmark.title %><br/>
+    <%= bookmark.url %><br/>
+    <%= bookmark.comment %><br/>
+    <%= link_to 'Show', bookmark %><br/>
+    <%= link_to 'Edit', edit_bookmark_path(bookmark) %><br/>
+    <%= link_to 'Destroy', bookmark, method: :delete, data: { confirm: 'Are you sure?' } %>
+  </li>
 <% end %>
-</table>
+</ol>
 
 <br />
 
